# k8s-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
src/k8s_mcp/: __init__.py  __main__.py  server.py
